<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.michelin.kafka</groupId>
  <artifactId>fully-managed-connectors-consumer</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>fully-managed-connectors-consumer</name>

  <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
        <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <properties>
        <java.version>21</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <jvmArguments>
                        -javaagent:opentelemetry-javaagent.jar
                        -XX:MaxRAMPercentage=75
                        -XX:+UseParallelGC
                        -XX:ActiveProcessorCount=1
                        -Djdk.virtualThreadScheduler.parallelism=20
                        --add-opens java.base/java.time=ALL-UNNAMED
                        -Djava.security.egd=file:/dev/./urandom
                        -Dotel.logs.exporter=otlp
                        -Dotel.metrics.exporter=otlp
                        -Dotel.traces.exporter=otlp
                        -Dotel.exporter.otlp.protocol=grpc
                        -Dotel.exporter.otlp.endpoint=https://otel-eur.michelin.com:443
                        -Dotel.exporter.otlp.headers=x-scope-orgid=default
                        -Dotel.resource.attributes=service.name=fully-managed-connectors-consumer,service.namespace=kafka,environment=dev
                        -Dotel.javaagent.debug=false
                    </jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
